--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
                 <h3>Income Expensive tracker</h3>
                 <p> Timer will run untill new year in a web page </p>
                 <p>Do you see it?:<a href="income expense/index.html" >Click Here</a></p>
+                <h3>Application UI </h3>
+                <p> During my training at a product-based company, I worked on improving the UI using React.js. </p>
+                <p>Do you see it?:<a href="https://github.com/Mrbalasubramanian/React-UI-Application" >Click Here</a></p>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
